Fix Nav Spacing

--- a/style.css
+++ b/style.css
@@ -2,27 +2,27 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 .nav--primary {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 15px;
 }
 
 .ul--nav-left {
+    list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 15px;
 }
 
 .ul--nav-right {
+    list-style-type: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 15px;
 }
